# woofnb

./: .gitignore  README.md  pyproject.toml  specification.md
.github/workflows/: ci.yml
docs/: implementation-plan.md
examples/: minimal.woofnb
scripts/: install_woof.sh
src/woofnb/: __init__.py  cli.py  fmt.py  jupyter.py  kernel.py  lint.py  model.py  parse.py  plan.py  runner.py  serialize.py
tests/: test_cache.py  test_cli_smoke.py  test_fmt.py  test_jupyter_interop.py  test_lint_plan.py  test_parse_serialize.py  test_policy.py  test_runner.py
vscode/woofnb-vscode/: .gitignore  .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
vscode/woofnb-vscode/src/: controller.ts  extension.ts  serializer.ts
vscode/woofnb-vscode/src/test/: mock_vscode.ts  test_kernel.ts
